--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.0",
+    "bcryptjs": "^3.0.3",
     "prisma": "^7.0.1",
     "typescript": "^5.4.4"
   },
   "dependencies": {
     "@prisma/adapter-mariadb": "^7.0.1",
     "@prisma/client": "^7.0.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mysql2": "^3.15.3",
